Build was fixed and cleaned up. The name of variable has been corrected.
Signed-off-by: akhad

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <version>1.0</version>
     <packaging>war</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
