--- a/src/main/extensions/safari/shorter.safariextension/Info.plist
+++ b/src/main/extensions/safari/shorter.safariextension/Info.plist
@@ -13,11 +13,22 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>Chrome</key>
 	<dict>
+		<key>Context Menu Items</key>
+		<array>
+			<dict>
+				<key>Command</key>
+				<string>copy-context</string>
+				<key>Identifier</key>
+				<string>copy-context</string>
+				<key>Title</key>
+				<string>Copy short link</string>
+			</dict>
+		</array>
 		<key>Global Page</key>
 		<string>shorter.html</string>
 		<key>Popovers</key>
@@ -56,7 +67,12 @@
 	<key>Content</key>
 	<dict>
 		<key>Scripts</key>
-		<dict/>
+		<dict>
+			<key>Start</key>
+			<array>
+				<string>injected.js</string>
+			</array>
+		</dict>
 	</dict>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
