--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+          <id>morphia</id>
+          <url>http://morphia.googlecode.com/svn/mavenrepo/</url>
+        </repository>
+    </repositories>
+
+
     <build>
         <plugins>
             <plugin>
@@ -62,9 +70,19 @@
             <version>2.10.1</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>0.99.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
+        </dependency>
+        <dependency>
+          <groupId>commons-lang</groupId>
+          <artifactId>commons-lang</artifactId>
+          <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -72,5 +90,5 @@
             <version>2.2.2</version>
         </dependency>
     </dependencies>
-    
+
 </project>
